# Kuroba-Experimental

./: .gitattributes  .gitignore  .travis.yml  README.md
.github/: stale.yml
.github/workflows/: build.yml  create_release.py  release.yml
Kuroba/: build.gradle  gradle.properties  settings.gradle  upload_apk.py  versions.gradle
Kuroba/app/: .gitignore  build.gradle  buildnumber.property  debug.properties  kuroba_ex.jks.enc  kuroba_ex_debug.jks  proguard.cfg
Kuroba/buildscripts/: .gitignore  README.md  buildall.sh
Kuroba/buildscripts/include/: depinfo.sh  download-sdk.sh  path.sh
Kuroba/buildscripts/scripts/: dav1d.sh  ffmpeg.sh  fribidi.sh  harfbuzz.sh  libass.sh  lua.sh  mbedtls.sh  mpv-android.sh
Kuroba/core-common/: build.gradle
Kuroba/core-logger/: build.gradle
Kuroba/core-model/: build.gradle  proguard-rules.pro
Kuroba/core-parser/: build.gradle
Kuroba/core-settings/: build.gradle
Kuroba/core-spannable/: build.gradle
Kuroba/core-themes/: build.gradle
Kuroba/database/: build.gradle
Kuroba/gradle/wrapper/: gradle-wrapper.properties
Kuroba/model/: build.gradle
docs/: ic_launcher_dev.psd  new_icon_512.psd  new_icon_fdroid_512.psd
kuroba_ex_native/: .gitignore  Cargo.toml  build_libs.py
kuroba_ex_native/.cargo/: config
kuroba_ex_native/src/: helpers.rs  lib.rs  post_comment_parsed_mapper.rs  post_parser_context_mapper.rs  thread_raw_mapper.rs
kuroba_ex_native/src/mappers/: descriptor_mapper.rs  post_parsed_mapper.rs  post_parser_context_mapper.rs  thread_raw_mapper.rs
kuroba_ex_native/src/usecases/: parse_thread_posts_use_case.rs
(+3773 files in other folders)
