[package]
name = "kuroba_ex_native"
version = "0.1.0"
authors = ["k1rakishou <kez1911@protonmail.com>"]
edition = "2018"

[dependencies]
jni = { version = "0.19.0" , default-features = false}
kuroba_ex_new_post_parser = { git = "https://github.com/K1rakishou/KurobaEx-post-parser", version = "0.2.3" }

[dependencies.log]
version = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

[profile.release]
lto = true

[lib]
name = "kuroba_ex_native"
crate-type = ["cdylib"]